<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/t1"
                android:fontFamily="times new roman"
                android:text="@string/login_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_textsize"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/card_margin"
                android:fontFamily="times new roman"
                android:text="@string/title_text2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/titile_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:layout_marginTop="@dimen/card_margin"
                android:fontFamily="times new roman"
                android:text="@string/title_text3"
                android:textColor="@android:color/white"
                android:textSize="@dimen/titile_size"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/layout_margin"
                android:hint="Enter PhoneNumber">

                <EditText
                    android:id="@+id/num"
                    style="@style/text1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:background="@android:color/white"
                    android:maxLength="10"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:hint="Enter OTP"
                android:visibility="gone"
                app:passwordToggleContentDescription="description"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                >

                <EditText
                    android:id="@+id/otp"
                    style="@style/text2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:background="@android:color/white"
                    android:maxLength="6"
                    />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="#FFF59D"
                android:onClick="generateotp"
                android:text="Genertae Otp"
                android:textColor="#1B5E20"/>

            <Button
                android:id="@+id/verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="#FFF59D"
                android:onClick="verify"
                android:text="Verify"
                android:textColor="#1B5E20"
                android:visibility="gone"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="***Do not write +91 with phone number***"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>