<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DCEDC8">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:clipToPadding="false"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"

                    >

                    <LinearLayout
                        android:id="@+id/rel1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        >

                 <!--       <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_gravity="end"
                            android:textSize="18sp"
                            android:text="80%"
                            android:padding="4dp"
                            android:id="@+id/count"
                            android:textStyle="bold"
                            android:textColor="@android:color/white"
                            android:background="@android:color/holo_orange_light"
                            />
                            -->
                        <ImageView
                            android:id="@+id/thumbnail1"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                           android:padding="10dp"
                            android:background="@drawable/circular_textview"
                            android:src="@drawable/attendence"/>

                        <TextView
                            android:id="@+id/title1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/thumbnail1"
                            android:maxLines="3"
                            android:padding="@dimen/padding"
                            android:text="@string/attendance"
                            android:textColor="#222"
                            android:fontFamily="times new roman"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"/>

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="2dp"
    android:background="@color/colorAccent"
    />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    >

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/marks_layout"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        >

                        <ImageView
                            android:id="@+id/thumbnail2"
                            android:layout_height="64dp"
                            android:layout_width="64dp"
                            android:padding="10dp"
                            android:background="@drawable/circular_textview"
                            android:scaleType="centerCrop"
                            android:src="@drawable/marks"/>

                        <TextView
                            android:id="@+id/title2"
                            android:fontFamily="times new roman"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:text="@string/marks"
                            android:textColor="#222"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:background="@color/colorAccent"
                            />

                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:clipToPadding="false">

                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view3"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:clickable="true"
                    android:layout_margin="10dp"
                   >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:id="@+id/announcement_layout"
                        >

                        <ImageView
                            android:id="@+id/thumbnail3"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circular_textview"
                            android:padding="10dp"

                            android:src="@drawable/announcement"/>

                        <TextView
                            android:id="@+id/title3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/announcement"
                            android:textColor="#222"
                            android:fontFamily="times new roman"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:background="@color/colorAccent"
                            />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view4"
                    android:layout_width="160dp"
                    android:clickable="true"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:id="@+id/suspension_layout"
                        >
                        <ImageView
                            android:id="@+id/thumbnail4"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:padding="10dp"
                            android:background="@drawable/circular_textview"
                            android:src="@drawable/suspention"/>

                        <TextView
                            android:fontFamily="times new roman"
                            android:id="@+id/title4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/suspention"
                            android:textColor="#222"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:background="@color/colorAccent"
                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view5"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/placement_layout"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <ImageView
                            android:id="@+id/thumbnail5"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:padding="10dp"
                            android:background="@drawable/circular_textview"
                            android:src="@drawable/placement"/>

                        <TextView
                            android:id="@+id/title5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:text="@string/placement"
                            android:textColor="#222"
                            android:fontFamily="times new roman"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:background="@color/colorAccent"
                            />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view6"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:clipToPadding="false"
                    android:layout_margin="10dp"
                    >

                    <LinearLayout
                        android:id="@+id/rel6"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        >

                        <ImageView
                            android:id="@+id/thumbnail6"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:padding="10dp"
                            android:background="@drawable/circular_textview"
                            android:src="@drawable/performance"/>

                        <TextView
                            android:id="@+id/title6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:text="@string/performance"
                            android:textColor="#222"
                            android:fontFamily="times new roman"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:background="@color/colorAccent"
                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view7"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    >

                    <LinearLayout
                        android:id="@+id/mentorDetailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <ImageView
                            android:id="@+id/thumbnail7"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:padding="10dp"
                            android:background="@drawable/circular_textview"
                            android:src="@drawable/mentor"/>

                        <TextView
                            android:id="@+id/title7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:text="@string/mentor"
                            android:textColor="#222"
                            android:fontFamily="times new roman"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:background="@color/colorAccent"
                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view8"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                   >

                    <LinearLayout
                        android:id="@+id/studentDetail_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/thumbnail8"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circular_textview"
                            android:src="@drawable/mob"/>

                        <TextView
                            android:id="@+id/title8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:text="@string/studentdetails"
                            android:textColor="#222"
                            android:fontFamily="times new roman"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:background="@color/colorAccent"
                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>